--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.0",
-    "node-fetch": "^3.3.2"
-  },
-  "license": "MIT"
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "express-session": "^1.17.3"
+  }
 }
