--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "groq-chat",
-  "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "cookie-parser": "^1.4.6"
   }
 }
