--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "name": "ogmsai",
+  "version": "1.0.0",
+  "main": "server.js",
   "type": "module",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.2",
-    "express-session": "^1.17.3",
     "cookie-parser": "^1.4.6"
   }
 }
